Fix icon alignment in blog list card

--- a/assets/css/blog/_list.sass
+++ b/assets/css/blog/_list.sass
@@ -108,6 +108,8 @@
           +clamp-lines(3)
           line-height: px-to-rem(26)
       .more
+        display: flex
+        align-items: center
         font-size: px-to-rem(14)
         font-weight: bold
         color: $link-hover
